force-app/main/default/objects/PDRI__Managed_Object_Retrieve__c/PDRI__Managed_Object_Retrieve__c.object-meta.xml
<CustomObject>
    <label>Managed Object Retrieve</label>
    <nameField>
        <displayFormat>MOR-{00000000}</displayFormat>
        <label>Managed Object Retrieve Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Managed Object Retrieves</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>