force-app/main/default/objects/PDRI__Managed_Object_Retrieve__c/fields/PDRI__Last_Retrieve_Time__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Last_Retrieve_Time__c</fullName>
    <label>Last Retrieve Time</label>
    <type>DateTime</type>
</CustomField>