force-app/main/default/objects/PDRI__Managed_Object_Retrieve__c/fields/PDRI__Salesforce_Instance__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Salesforce_Instance__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Salesforce Instance</label>
    <referenceTo>PDRI__Salesforce_Instance__c</referenceTo>
    <relationshipLabel>Managed Object Retrieves</relationshipLabel>
    <relationshipName>Managed_Object_Retrieves</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>